--- a/public/screen.css
+++ b/public/screen.css
@@ -7,3 +7,42 @@ body {
   min-height: 100%;
   font: 16px / 1 sans-serif;
 }
+
+header {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 150px;
+  font-size: 1.5rem;
+}
+
+main {
+  display: flex;
+  justify-content: space-around;
+}
+
+aside {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h3 {
+  font-size: 3rem;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+button {
+  height: 1.5rem;
+  width: 5rem;
+  font-size: 0.8rem;
+}
