--- a/public/screen.css
+++ b/public/screen.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Pacifico|Raleway");
+
 html {
   height: 100%;
 }
@@ -5,19 +7,23 @@ html {
 body {
   margin: 0;
   min-height: 100%;
-  font: 16px / 1 sans-serif;
+  font: 16px / 1 "Raleway", sans-serif;
+  background-color: #f4442e;
 }
 
 header {
   display: flex;
   justify-content: center;
-  padding-bottom: 100px;
+  padding: 50px 0;
   font-size: 2rem;
+  font-family: "Pacifico", cursive;
+  background-image: url(/images/header-background.jpeg);
 }
 
 main {
   display: flex;
   justify-content: space-around;
+  padding-top: 100px;
 }
 
 aside {
