--- a/public/screen.css
+++ b/public/screen.css
@@ -109,7 +109,7 @@ div {
 .add-replay {
   display: flex;
   justify-content: center;
-  padding-top: 75px;
+  padding-top: 0;
 }  
 
 @media (max-width: 700px) {
@@ -128,12 +128,12 @@ div {
 }
 
 @media (max-height: 600px) {
-  .add-replay {
-    padding-top: 25px;
-  }
-  
   h3 {
     font-size: 1.7rem;
     margin: 15px 0 25px 0;
   }
 }
+  
+
+ 
+
